--- a/app/src/main/res/layout/card_view_template.xml
+++ b/app/src/main/res/layout/card_view_template.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_margin="5dp"
     card_view:cardCornerRadius="4dp"
-    android:elevation="24dp"
+    android:elevation="32dp"
     android:clickable="true"
     android:background="#8000"
     android:foreground="?android:attr/selectableItemBackground">
@@ -41,7 +40,8 @@
                     card_view:srcCompat="@drawable/picture"
                     android:id="@+id/picture"
                     android:scaleType="centerCrop"
-                    android:layout_width="0dip" />
+                    android:layout_width="0dip"
+                    />
 
                 <ImageView
                     android:layout_width="0dip"
@@ -57,7 +57,6 @@
                 android:id="@+id/postContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hello"
                 android:textColor="#FFFFFF"
                 android:gravity="bottom|fill_horizontal"
                 android:layout_marginLeft="1dp"
