Added clear button to calendar that removes any date filter, added luke_cross icon for the clear, added highres luke_tick icon, fixed how the icon looks in multiple different views

--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -79,6 +79,7 @@
             android:layout_alignParentRight="true"
             android:background="@null"
             android:text="Button"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/luke_tick" />
 
     </RelativeLayout>
