--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -205,7 +205,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline19"
             android:textAlignment="center"/>
 
-        <android.support.constraint.ConstraintLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/colorPrimaryDark"
@@ -217,15 +217,16 @@
             <ImageButton
                 android:id="@+id/newUserConfirmButton"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="match_parent"
                 android:background="@null"
+                android:layout_alignParentRight="true"
                 android:text="Confirm"
+                android:scaleType="fitCenter"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/luke_tick" />
-        </android.support.constraint.ConstraintLayout>
+        </RelativeLayout>
     </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
