--- a/app/src/main/res/layout/popup_calendar.xml
+++ b/app/src/main/res/layout/popup_calendar.xml
@@ -1,51 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/popup_calendar_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/popup_calendar_root">
+    android:layout_height="match_parent">
 
     <DatePicker
-        android:layout_width="wrap_content"
-        android:headerBackground="@color/colorPrimary"
-        android:background="@color/vintage_vanilla_white"
-        android:layout_height="wrap_content"
         android:id="@+id/popup_calendar_datepicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/vintage_vanilla_white"
+        android:headerBackground="@color/colorPrimary"
+        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.55" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:orientation="vertical"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker">
+
+        <ImageButton
+            android:id="@+id/popup_calendar_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/luke_cross" />
 
         <ImageButton
             android:id="@+id/popup_calendar_accept"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:background="@null"
-            android:layout_gravity="center"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/luke_tick" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline"
-        app:layout_constraintGuide_begin="491dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="491dp"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintGuide_begin="491dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="491dp" />
 
 
 </android.support.constraint.ConstraintLayout>
