--- a/app/src/main/res/menu/main_drawer.xml
+++ b/app/src/main/res/menu/main_drawer.xml
@@ -4,17 +4,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/luke_profile"
             android:id="@+id/my_profile"
             android:title="My profile" />
         <item
             android:icon="@drawable/ic_menu_share"
             android:id="@+id/achievements"
-            android:title="Achievements" />
+            android:title="No action" />
         <item
-            android:icon="@drawable/ic_menu_share"
-            android:id="@+id/leaderboard"
-            android:title="Leaderboard" />
+            android:icon="@drawable/luke_settings"
+            android:id="@+id/edit_profile"
+            android:title="Edit profile" />
     </group>
 
     <item android:title="Actions">
@@ -22,11 +22,11 @@
             <item
                 android:id="@+id/logout"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Logout" />
+                android:title="No action" />
             <item
                 android:id="@+id/quit"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Quit" />
+                android:title="No action" />
         </menu>
     </item>
 
