minor bug fixes and tweaks

--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -11,7 +11,7 @@
         android:id="@+id/popupMainContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -228,5 +228,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 </android.support.constraint.ConstraintLayout>
