fixed calendar popup

--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -56,8 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimaryDark"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -69,8 +68,9 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:background="@null"
-            android:text="Button"
-            app:srcCompat="@drawable/luke_back" />
+            app:srcCompat="@drawable/luke_back"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"/>
 
         <ImageButton
             android:id="@+id/button_tick_submit"
@@ -78,9 +78,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:background="@null"
-            android:text="Button"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/luke_tick" />
+            app:srcCompat="@drawable/luke_tick"
+            android:scaleType="fitCenter"/>
 
     </RelativeLayout>
 
