--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -14,10 +14,11 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/guideline14" />
+            app:layout_constraintBottom_toTopOf="@+id/guideline14"
+            />
 
     <android.support.constraint.Guideline
-        android:layout_width="384dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline14"
         android:orientation="horizontal"
@@ -25,7 +26,7 @@
         tools:layout_editor_absoluteY="576dp"
         tools:layout_editor_absoluteX="0dp" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/bottomBarMap"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -36,41 +37,57 @@
         app:layout_constraintHorizontal_bias="0.33"
         app:layout_constraintTop_toTopOf="@+id/guideline14"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:background="@color/colorPrimaryDark">
 
             <ImageButton
                 android:id="@+id/button_back"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:elevation="4dp"
                 android:text="Button"
                 app:srcCompat="@drawable/luke_menu"
-                android:background="@null"/>
+                android:background="@null"
+                android:scaleType="fitStart"
+                android:padding="8dp"
+                tools:layout_editor_absoluteY="8dp"
+                tools:layout_editor_absoluteX="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="left"/>
 
             <ImageButton
                 android:id="@+id/button_new_submission"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:text="Button"
                 app:srcCompat="@drawable/luke_camera"
-                android:background="@null">
+                android:background="@null"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:padding="8dp"
+                tools:layout_editor_absoluteY="8dp"
+                tools:layout_editor_absoluteX="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="center">
 
             </ImageButton>
 
             <ImageButton
                 android:id="@+id/button_filters"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:text="Button"
                 app:srcCompat="@drawable/luke_filters"
                 android:background="@null"
-                />
-    </RelativeLayout>
+                android:scaleType="fitEnd"
+                android:padding="8dp"
+                tools:layout_editor_absoluteY="8dp"
+                tools:layout_editor_absoluteX="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="right"/>
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
