--- a/app/src/main/res/layout/popup_calendar.xml
+++ b/app/src/main/res/layout/popup_calendar.xml
@@ -21,10 +21,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/guideline26"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageButton
             android:id="@+id/popup_calendar_cancel"
@@ -46,13 +47,14 @@
     </RelativeLayout>
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
+        android:id="@+id/guideline26"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="491dp"
+        app:layout_constraintGuide_percent="0.9015625"
+        tools:layout_editor_absoluteY="577dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="491dp" />
+        app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker"/>
 
 
 </android.support.constraint.ConstraintLayout>
