--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -202,7 +202,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
