--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,23 +14,34 @@
         android:id="@+id/loginButton"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintHorizontal_bias="0.47" />
+        app:layout_constraintVertical_bias="0.63"
+        android:textColor="@color/vintage_vanilla_white"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/guideline27"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:textSize="16sp" />
 
     <Button
         android:text="skip login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/skipLoginButton"
-        app:layout_constraintLeft_toLeftOf="@+id/loginButton"
-        app:layout_constraintRight_toRightOf="@+id/loginButton"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+        android:textColor="@color/vintage_vanilla_white"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintTop_toTopOf="@+id/loginButton"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline27"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+        android:textSize="16sp"
+        />
 
     <ImageView
         app:srcCompat="@drawable/logo_bonus_white"
@@ -46,7 +57,7 @@
         android:layout_marginBottom="16dp" />
 
     <android.support.constraint.Guideline
-        android:layout_width="384dp"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
         android:orientation="horizontal"
@@ -81,18 +92,18 @@
         android:layout_height="640dp"
         android:id="@+id/guideline6"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.6041667"
+        app:layout_constraintGuide_percent="0.6527778"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="232dp" />
+        tools:layout_editor_absoluteX="235dp" />
 
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="640dp"
         android:id="@+id/guideline8"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.40104166"
+        app:layout_constraintGuide_percent="0.35"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="154dp" />
+        tools:layout_editor_absoluteX="126dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -102,5 +113,32 @@
         app:layout_constraintGuide_percent="0.03125"
         tools:layout_editor_absoluteY="20dp"
         tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:text="Baltic App"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline23"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/vintage_vanilla_white"
+        android:textSize="56sp"
+        android:textAllCaps="false"
+        android:fontFamily="sans-serif"
+        android:textAlignment="center"/>
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="640dp"
+        android:id="@+id/guideline27"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="180dp" />
 
 </android.support.constraint.ConstraintLayout>
