--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -172,7 +172,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:text="Untitled"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/reportDescription" />
