--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -65,7 +65,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline17"
-            android:layout_width="384dp"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.9"
@@ -74,7 +74,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline18"
-            android:layout_width="384dp"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.8"
@@ -83,7 +83,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline19"
-            android:layout_width="384dp"
+            android:layout_width="360dp"
             android:layout_height="0dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.56875"
@@ -92,7 +92,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline20"
-            android:layout_width="384dp"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.3359375"
@@ -105,7 +105,7 @@
             android:layout_height="640dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5"
-            tools:layout_editor_absoluteX="192dp"
+            tools:layout_editor_absoluteX="180dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <RadioGroup
@@ -138,7 +138,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline22"
-            android:layout_width="384dp"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.1046875"
@@ -221,12 +221,13 @@
                 android:background="@null"
                 android:layout_alignParentRight="true"
                 android:text="Confirm"
-                android:scaleType="fitCenter"
+                android:scaleType="fitEnd"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/luke_tick" />
+                app:srcCompat="@drawable/luke_tick"
+                android:padding="8dp"/>
         </RelativeLayout>
     </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
