--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -55,12 +55,12 @@
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        style="@style/BottomActionBar">
 
         <ImageButton
             android:id="@+id/button_back"
@@ -71,7 +71,6 @@
             app:srcCompat="@drawable/luke_back"
             android:scaleType="fitStart"
             android:adjustViewBounds="true"
-            android:padding="8dp"
             android:layout_weight="1"/>
 
         <ImageButton
@@ -82,7 +81,6 @@
             android:background="@null"
             app:srcCompat="@drawable/luke_tick"
             android:scaleType="fitEnd"
-            android:padding="8dp"
             android:layout_weight="1"/>
 
     </LinearLayout>
