--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -114,24 +114,20 @@
         android:id="@+id/bottomBarMap"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryDark"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2">
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        style="@style/BottomActionBar">
 
         <ImageButton
             android:id="@+id/button_back"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
             android:layout_weight="1"
             android:background="@null"
-            android:elevation="4dp"
-            android:padding="8dp"
             android:scaleType="fitStart"
-            android:text="Button"
             app:srcCompat="@drawable/luke_back" />
 
         <View
