--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,4 +14,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/shamrock</item>
     </style>
+    <style name="BottomActionBar">
+        <item name="android:padding">8dp</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
+    </style>
 </resources>
