--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,137 +8,128 @@
 
 
     <Button
-        android:text="Log in"
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/loginButton"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.63"
-        android:textColor="@color/vintage_vanilla_white"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintRight_toLeftOf="@+id/guideline27"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Log in"
+        android:textColor="@color/vintage_vanilla_white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        android:textSize="16sp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline27"
+        app:layout_constraintTop_toBottomOf="@+id/inconsolataTextView"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginTop="16dp" />
 
     <Button
-        android:text="skip login"
+        android:id="@+id/skipLoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/skipLoginButton"
-        android:textColor="@color/vintage_vanilla_white"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintTop_toTopOf="@+id/loginButton"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline27"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+        android:layout_marginStart="16dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="skip login"
+        android:textColor="@color/vintage_vanilla_white"
         android:textSize="16sp"
-        />
+        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline27"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/loginButton" />
 
     <ImageView
-        app:srcCompat="@drawable/logo_bonus_white"
         android:id="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintRight_toLeftOf="@+id/guideline8"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.66"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintHorizontal_bias="0.66"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline8"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo_bonus_white"
+        android:scaleType="centerInside"/>
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline3"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.8921875"
-        tools:layout_editor_absoluteY="571dp"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="571dp" />
 
     <ImageView
-        app:srcCompat="@drawable/luke_en_white"
         android:id="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintVertical_bias="0.65999997"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintLeft_toLeftOf="@+id/guideline8"
         app:layout_constraintRight_toLeftOf="@+id/guideline6"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.65999997"
+        app:srcCompat="@drawable/luke_en_white"
+        android:scaleType="centerInside"/>
 
     <ImageView
-        app:srcCompat="@drawable/metropolia_white_new"
         android:id="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintVertical_bias="0.38"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintLeft_toLeftOf="@+id/guideline6"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.38"
+        app:srcCompat="@drawable/metropolia_white_new"
+        android:scaleType="centerInside"/>
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline6"
         android:layout_width="wrap_content"
         android:layout_height="640dp"
-        android:id="@+id/guideline6"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.6527778"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="235dp" />
+        tools:layout_editor_absoluteX="235dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline8"
         android:layout_width="0dp"
         android:layout_height="640dp"
-        android:id="@+id/guideline8"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.35"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="126dp" />
+        tools:layout_editor_absoluteX="126dp"
+        tools:layout_editor_absoluteY="0dp" />
 
-    <android.support.constraint.Guideline
+    <com.luke.lukef.lukeapp.customviews.InconsolataTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline23"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.03125"
-        tools:layout_editor_absoluteY="20dp"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <TextView
-        android:text="Baltic App"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline23"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        android:layout_marginBottom="8dp"
-        android:textColor="@color/vintage_vanilla_white"
+        android:layout_marginTop="16dp"
+        android:text="Baltic App"
         android:textSize="56sp"
-        android:textAllCaps="false"
-        android:fontFamily="sans-serif"
-        android:textAlignment="center"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/inconsolataTextView"
+        app:layout_constraintVertical_bias="0.39"
+        android:textColor="@color/vintage_vanilla_white" />
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline27"
         android:layout_width="wrap_content"
         android:layout_height="640dp"
-        android:id="@+id/guideline27"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="180dp" />
+        tools:layout_editor_absoluteX="180dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 </android.support.constraint.ConstraintLayout>
