--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -168,10 +168,11 @@
         android:id="@+id/categorySelectButtonNewSubmission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/RoundButton"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:text="@string/button_category"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newSubmissionEditTextDescrption" />
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
+        app:layout_constraintTop_toTopOf="@+id/scrollView" />
 
 </android.support.constraint.ConstraintLayout>
