--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
+            class="com.google.android.gms.maps.MapFragment"-->
         <fragment
             android:id="@+id/googleMapFragment"
             class="com.google.android.gms.maps.MapFragment"
