styled some buttons and fonts

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -28,7 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintHorizontal_bias="1.0"
-        style="@style/TextViewTitle"
+        style="@style/TextViewTitleLarge"
         android:gravity="center"/>
 
     <android.support.constraint.Guideline
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline30"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.90625"
+        app:layout_constraintGuide_percent="0.9"
         tools:layout_editor_absoluteY="580dp"
         tools:layout_editor_absoluteX="0dp" />
     <LinearLayout
