--- a/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/app/src/main/res/layout/leaderboard_list_item.xml
@@ -6,89 +6,103 @@
     android:layout_height="wrap_content">
 
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="117dp"
         android:id="@+id/guideline29"
+        android:layout_width="wrap_content"
+        android:layout_height="99dp"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.45277777"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="163dp" />
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
+        android:id="@+id/leaderboard_list_item_user_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@drawable/no_category_image"
-        android:id="@+id/leaderboard_list_item_user_image"
-        android:scaleType="fitCenter"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guideline29"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.56"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/leaderboard_list_item_position" />
-
-    <TextView
-        android:text="Name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/leaderboard_list_item_username"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/leaderboard_list_item_position"
+        app:layout_constraintRight_toLeftOf="@+id/guideline29"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline29"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintVertical_bias="0.56"
+        app:srcCompat="@drawable/no_category_image" />
 
     <TextView
-        android:text="Da Boss"
+        android:id="@+id/leaderboard_list_item_username"
+        style="@style/TextViewTitleSmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/leaderboard_list_item_rank"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/leaderboard_list_item_rank_image"
-        app:layout_constraintTop_toTopOf="@+id/leaderboard_list_item_rank_image"
-        app:layout_constraintBottom_toBottomOf="@+id/leaderboard_list_item_rank_image" />
+        android:layout_marginTop="16dp"
+        android:text="Name"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline29"
+        app:layout_constraintRight_toLeftOf="@+id/guideline31"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/leaderboard_list_item_rank"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Da Boss"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline29"
+        app:layout_constraintRight_toLeftOf="@+id/guideline31"
+        app:layout_constraintTop_toBottomOf="@+id/leaderboard_list_item_username" />
 
     <ImageView
-        android:layout_height="35dp"
-        app:srcCompat="@drawable/com_auth0_lock_ic_check_success"
         android:id="@+id/leaderboard_list_item_rank_image"
         android:layout_width="35dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/leaderboard_list_item_username"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline29"
-        android:layout_marginStart="8dp" />
+        android:layout_height="35dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline31"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/com_auth0_lock_ic_check_success" />
 
     <TextView
-        android:text="Score: 9001"
+        android:id="@+id/leaderboard_list_item_score"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/leaderboard_list_item_score"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/leaderboard_list_item_rank_image"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline29"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Score: 9001"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline29"
+        app:layout_constraintRight_toLeftOf="@+id/guideline31"
+        app:layout_constraintTop_toBottomOf="@+id/leaderboard_list_item_rank" />
 
     <TextView
-        android:text="#1"
+        android:id="@+id/leaderboard_list_item_position"
+        style="@style/TextViewTitleMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/leaderboard_list_item_position"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="#1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        style="@style/TextViewTitle"
-        android:gravity="center"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline31"
+        android:layout_width="wrap_content"
+        android:layout_height="99dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85833335"
+        tools:layout_editor_absoluteX="309dp"
+        tools:layout_editor_absoluteY="0dp" />
 </android.support.constraint.ConstraintLayout>
