--- a/app/src/main/res/layout/popup_calendar.xml
+++ b/app/src/main/res/layout/popup_calendar.xml
@@ -40,7 +40,7 @@
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9015625"
+        app:layout_constraintGuide_percent="0.9"
         app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="577dp" />
